generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}
generator dbml {
  provider = "prisma-dbml-generator"
}

generator erd {
  provider = "prisma-erd-generator"
  output   = "./ERD.svg"
}

enum FriendshipStatus {
  PENDING
  ACCEPTED
  REJECTED
}

enum NoteVisibility {
  PRIVATE
  SCHOOL
  PUBLIC
}

model User {
  id              String    @id @default(cuid())
  clerkId         String    @unique
  email           String    @unique
  fullName        String
  age             Int?
  bio             String?   @db.Text
  joinedAt        DateTime  @default(now())
  profilePhotoUrl String?

  schoolId        String?
  school          School?   @relation(fields: [schoolId], references: [id], onDelete: SetNull)

  // denormalized counters for fast reads
  notesOwnedCount   Int @default(0)
  foldersOwnedCount Int @default(0)

  notes           Note[]
  folders         Folder[]
  noteLikes       NoteLike[]
  noteComments    NoteComment[]
  streak          UserStreak?
  tamagotchis     UserTamagotchi[]
  progress        UserProgress?

  sentFriendships     Friendship[] @relation("FriendshipRequester")
  receivedFriendships Friendship[] @relation("FriendshipAddressee")

  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt

  @@index([schoolId])
  @@index([fullName])
  @@index([createdAt])
}

model Note {
  id            String    @id @default(cuid())
  name          String
  content       String    @db.Text
  visibility    NoteVisibility @default(PRIVATE)
  publishedAt   DateTime?
  likeCount     Int       @default(0)
  commentCount  Int       @default(0)

  ownerId       String
  owner         User      @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  folderId      String?
  folder        Folder?   @relation(fields: [folderId], references: [id], onDelete: SetNull)
  likes         NoteLike[]
  comments      NoteComment[]

  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  deletedAt     DateTime?

  @@index([ownerId, createdAt])
  @@index([ownerId, visibility, updatedAt])
  @@index([folderId])
  @@index([deletedAt])
  @@index([name])
  @@index([visibility, publishedAt])
}

model Folder {
  id            String    @id @default(cuid())
  name          String
  description   String?   @db.Text

  ownerId       String
  owner         User      @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  deletedAt     DateTime?

  notes         Note[]

  @@index([ownerId, createdAt])
  @@index([deletedAt])
  @@index([name])
}

model Friendship {
  requesterId  String
  addresseeId  String
  status       FriendshipStatus @default(PENDING)
  createdAt    DateTime         @default(now())
  updatedAt    DateTime         @updatedAt

  requester    User @relation("FriendshipRequester", fields: [requesterId], references: [id], onDelete: Cascade)
  addressee    User @relation("FriendshipAddressee", fields: [addresseeId], references: [id], onDelete: Cascade)

  @@id([requesterId, addresseeId])
  @@index([addresseeId, status])
  @@index([requesterId, status])
}

model School {
  id           String   @id @default(cuid())
  name         String
  location     String?
  primaryColor String?
  accentColor  String?

  users        User[]

  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@unique([name])
}

model NoteLike {
  noteId      String
  userId      String
  createdAt   DateTime @default(now())

  note        Note     @relation(fields: [noteId], references: [id], onDelete: Cascade)
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([noteId, userId])
  @@index([userId, createdAt])
  @@index([noteId, createdAt])
}

model NoteComment {
  id          String   @id @default(cuid())
  noteId      String
  authorId    String
  body        String   @db.Text
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  deletedAt   DateTime?

  note        Note     @relation(fields: [noteId], references: [id], onDelete: Cascade)
  author      User     @relation(fields: [authorId], references: [id], onDelete: Cascade)

  @@index([noteId, createdAt])
  @@index([authorId, createdAt])
  @@index([deletedAt])
}

// ─── Tamagotchi System ───

model UserStreak {
  id             String    @id @default(cuid())
  userId         String    @unique
  user           User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  currentStreak  Int       @default(0)
  longestStreak  Int       @default(0)
  lastCheckinAt  DateTime?
  totalCheckins  Int       @default(0)

  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt
}

model UserTamagotchi {
  id          String    @id @default(cuid())
  userId      String
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  species     String    // current tier ID: "skeleton_spearman" | "bear" | "mewtwo" | etc.
  lineId      String?   // evolution line: "skeleton"|"wizard"|"ninja"|"karasu"|"samurai"; null = special pet
  displayName String?   // user-customizable; null = use species default name

  happiness   Int       @default(10) // 0–10; drops when days are missed, recovers with daily clicks

  isActive    Boolean   @default(false)

  lastClickAt DateTime? // tracks whether the user has clicked today

  createdAt   DateTime  @default(now())
  updatedAt   DateTime  @updatedAt

  @@unique([userId, species])
  @@index([userId])
  @@index([userId, lineId])
}

model UserProgress {
  userId      String  @id
  user        User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  // Global XP (0–1200) — unlocks evolution line tiers
  globalXp    Int @default(0)

  // Bear unlock conditions
  hasSavedFirstNote              Boolean @default(false)
  hasSavedFirstFolder            Boolean @default(false)

  // Mewtwo unlock conditions
  hasAddedFirstFriend            Boolean @default(false)
  hasAddedFirstCommunity         Boolean @default(false)
  hasAddedAnotherSchoolCommunity Boolean @default(false)

  // Snorlax unlock conditions
  hasMadeFirstStyleChange        Boolean @default(false)
  hasMadeFirstFontChange         Boolean @default(false)

  // One-time XP achievement flags
  hasTriedAllColors              Boolean @default(false)
  hasTriedAllFonts               Boolean @default(false)

  updatedAt   DateTime @updatedAt
}
