//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  clerkId String [unique, not null]
  email String [unique, not null]
  fullName String [not null]
  age Int
  bio String
  joinedAt DateTime [default: `now()`, not null]
  profilePhotoUrl String
  schoolId String
  school School
  notesOwnedCount Int [not null, default: 0]
  foldersOwnedCount Int [not null, default: 0]
  notes Note [not null]
  folders Folder [not null]
  noteLikes NoteLike [not null]
  noteComments NoteComment [not null]
  streak UserStreak
  tamagotchis UserTamagotchi [not null]
  progress UserProgress
  sentFriendships Friendship [not null]
  receivedFriendships Friendship [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Note {
  id String [pk]
  name String [not null]
  content String [not null]
  visibility NoteVisibility [not null, default: 'PRIVATE']
  publishedAt DateTime
  likeCount Int [not null, default: 0]
  commentCount Int [not null, default: 0]
  ownerId String [not null]
  owner User [not null]
  folderId String
  folder Folder
  likes NoteLike [not null]
  comments NoteComment [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table Folder {
  id String [pk]
  name String [not null]
  description String
  ownerId String [not null]
  owner User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  notes Note [not null]
}

Table Friendship {
  requesterId String [not null]
  addresseeId String [not null]
  status FriendshipStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  requester User [not null]
  addressee User [not null]

  indexes {
    (requesterId, addresseeId) [pk]
  }
}

Table School {
  id String [pk]
  name String [unique, not null]
  location String
  primaryColor String
  accentColor String
  users User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NoteLike {
  noteId String [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  note Note [not null]
  user User [not null]

  indexes {
    (noteId, userId) [pk]
  }
}

Table NoteComment {
  id String [pk]
  noteId String [not null]
  authorId String [not null]
  body String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  note Note [not null]
  author User [not null]
}

Table UserStreak {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  currentStreak Int [not null, default: 0]
  longestStreak Int [not null, default: 0]
  lastCheckinAt DateTime
  totalCheckins Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table UserTamagotchi {
  id String [pk]
  userId String [not null]
  user User [not null]
  species String [not null]
  lineId String
  displayName String
  happiness Int [not null, default: 10]
  isActive Boolean [not null, default: false]
  lastClickAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, species) [unique]
  }
}

Table UserProgress {
  userId String [pk]
  user User [not null]
  globalXp Int [not null, default: 0]
  hasSavedFirstNote Boolean [not null, default: false]
  hasSavedFirstFolder Boolean [not null, default: false]
  hasAddedFirstFriend Boolean [not null, default: false]
  hasAddedFirstCommunity Boolean [not null, default: false]
  hasAddedAnotherSchoolCommunity Boolean [not null, default: false]
  hasMadeFirstStyleChange Boolean [not null, default: false]
  hasMadeFirstFontChange Boolean [not null, default: false]
  hasTriedAllColors Boolean [not null, default: false]
  hasTriedAllFonts Boolean [not null, default: false]
  updatedAt DateTime [not null]
}

Enum FriendshipStatus {
  PENDING
  ACCEPTED
  REJECTED
}

Enum NoteVisibility {
  PRIVATE
  SCHOOL
  PUBLIC
}

Ref: User.schoolId > School.id [delete: Set Null]

Ref: Note.ownerId > User.id [delete: Cascade]

Ref: Note.folderId > Folder.id [delete: Set Null]

Ref: Folder.ownerId > User.id [delete: Cascade]

Ref: Friendship.requesterId > User.id [delete: Cascade]

Ref: Friendship.addresseeId > User.id [delete: Cascade]

Ref: NoteLike.noteId > Note.id [delete: Cascade]

Ref: NoteLike.userId > User.id [delete: Cascade]

Ref: NoteComment.noteId > Note.id [delete: Cascade]

Ref: NoteComment.authorId > User.id [delete: Cascade]

Ref: UserStreak.userId - User.id [delete: Cascade]

Ref: UserTamagotchi.userId > User.id [delete: Cascade]

Ref: UserProgress.userId - User.id [delete: Cascade]